# cocoa

./: README.md  pyproject.toml
src/cocoa/: cli.py  collator.py  logger.py  tokenizer.py  util.py  winnower.py
src/cocoa/config/: __init__.py  winnowing.yaml
