[project]
    classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
    ]
    dependencies = [ "numpy", "omegaconf", "polars", "rich", "typer" ]
    description = "configurable collator and tokenizer"
    keywords = [ "data collation", "generative event models", "tokenization" ]
    license = "MIT"
    license-files = [ "LICEN[CS]E.*" ]
    name = "cocoa"
    readme = { file = "README.md", content-type = "text/markdown" }
    requires-python = ">=3.11"
    version = "26.3.1"

    [project.scripts]
        cocoa = "cocoa.cli:main"

    [project.urls]
        Repository = "https://github.com/bbj-lab/cocoa"

[dependency-groups]
    dev = [ "pip", "ruff" ]


[tool.ruff]
    extend-exclude = [ "*.md" ]
    line-length    = 88

    [tool.ruff.format]
        docstring-code-format     = true
        indent-style              = "space"
        line-ending               = "lf"
        quote-style               = "double"
        skip-magic-trailing-comma = true

    [tool.ruff.lint]
        ignore = [ "E731" ]
        select = [ "E", "F", "I" ]

        [tool.ruff.lint.isort]
            known-first-party       = [ "cocoa", "cotorra", "coreopsis" ]
            split-on-trailing-comma = false

[build-system]
    build-backend = "setuptools.build_meta"
    requires      = [ "setuptools" ]
